[gd_scene load_steps=3 format=3 uid="uid://3rgrro1araw3"]

[ext_resource type="Theme" uid="uid://cnx5po62iaecs" path="res://Themes/process_theme.tres" id="1_426ni"]
[ext_resource type="Script" uid="uid://idhdb6jpla70" path="res://Scripts/process.gd" id="2_lrjlg"]

[node name="Process" type="Panel"]
custom_minimum_size = Vector2(150, 150)
offset_right = 150.0
offset_bottom = 150.0
mouse_filter = 1
theme = ExtResource("1_426ni")
script = ExtResource("2_lrjlg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ProcessImage" type="TextureRect" parent="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0
expand_mode = 2
stretch_mode = 5

[node name="ProcessName" type="Label" parent="PanelContainer/ProcessImage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = -21.0
offset_right = 75.0
offset_bottom = 2.0
grow_horizontal = 2
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProcessTime" type="Label" parent="PanelContainer/ProcessImage"]
layout_mode = 0
offset_left = -24.0
offset_top = 98.0
offset_right = 126.0
offset_bottom = 121.0
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1
